[package]
name = "coerce-actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coerce = { version = "0", features = ["full"]}
coerce-macros = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = { version = "0.1" }
tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry-jaeger = "0.18"
tracing-opentelemetry = "0.18"
opentelemetry = { version = "0.19", default-features = false, features = ["trace"] }

[build]
rustflags = ["--cfg", "tracing_unstable"]